--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ a:hover {
 .introtext{
     font-size: 1.5em;
     line-height: 140%;
+    max-width: 900px;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -146,6 +147,7 @@ h3 {
 p {
     line-height: 2rem;
     overflow-wrap: break-word;
+    max-width: 700px;
 }
 
 li {
