--- a/css/style.css
+++ b/css/style.css
@@ -458,15 +458,15 @@ img.responsive{
 
 .imageTwo {
     margin-top: 100rem;
-    width: 100%;
+    width: 150%;
     height: auto;
     opacity: 0.5;
 }
 
 .imageThree {
-    margin-top: 200rem;
-    width: auto;
-    height: 200%;
+    margin-top: 260rem;
+    height: auto;
+    width: 160%;
     opacity: 0.5;
     transform: rotate(340deg);
 }
